Fix contacts alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   gap: 2rem;
   padding: 2rem;
   justify-content: space-between;
